userservice/userservice/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: user-service
  labels:
    app: user-service
spec:
  containers:
    - name: user-service
      image: user-service:1.0
      imagePullPolicy: Never
      ports:
        - containerPort: 8081
